# minidrive_APC

./: .gitignore  CMakeLists.txt  help.md
client/: CMakeLists.txt  ahoj.txt
client/src/: main.cpp
common/: CMakeLists.txt  meta.hpp  protocol.hpp
docs/: architecture.md  protocol.md
server/: CMakeLists.txt
server/src/: main.cpp
server/storage/: users.json
